# git-lfs-skynet

./: .gitignore  Cargo.toml  Makefile  README.md
git-lfs-ipfs-cli/: Cargo.toml
git-lfs-ipfs-cli/src/: main.rs  transfer.rs
src/: clean.rs  main.rs  provider.rs  smudge.rs  transfer.rs
src/providers/: mod.rs  skynet.rs  storj.rs
